# csir

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  request.rs  requests.rs
src/requests/: errors.rs  get_price.rs  get_price_change.rs  get_quote.rs  get_remaining_calls.rs  mod.rs  request.rs
