[package]
name = "csir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
indexmap = {version = "1.8.2", features = ["serde-1"]}
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1", features = ["full"] }
